add more helper methods for creating layered vein generators, as we can't pass the not-yet-existing OreVeinDefinition into the layer pattern builder